# cvm.tucano

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  CVM.md  Dockerfile  LICENSE  PRODUCT.md  README.md  alembic.ini  build_and_push.sh  docker-compose.workers.yml  docker-compose.yml  ingestion_v2_final_report.md  ingestion_v2_plan.md  ingestion_v2_tasks.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release-please-config.json  release-please.yml
alembic/: env.py
alembic/versions/: 0001_fase1_fundacao.py  0002_fase2_dfp_itr.py  0003_fase3_fre_mvp.py  0004_usuarios.py  0005_ampliar_grupo_demonstracao_financeiro.py  0006_stop_syncs.py  0007_ingestion_v2_staging.py  0008_ingestion_v2_identity.py  0009_ingestion_v2_quarantine.py  1c2d3e4f5a6b_add_data_inicio_atuacao_to_fca_dri_unique_key.py  1f2a3b4c5d6e_add_probe_and_change_summary_to_ingestion_runs.py  20260616_001_fix_codigo_cvm_auditor_to_string.py  20260616_002_add_ingestion_lifecycle_snapshots.py  20260616_003_optimize_reconcile_indexes.py  20260621_001_add_update_scan_runs.py  20260622_001_add_analise_canonical_tables.py  20260623_001_add_analise_materializacao_campaigns.py  20260623_002_add_analise_materializacao_controle.py  20260623_003_add_analise_materializacao_chunk_execucoes.py  20260623_004_relax_fre_plano_recompra_classe_acao_tipo.py  20260624_001_add_analise_materializacao_incremental_metadata.py  20260624_001_relax_fre_relacao_subordinacao_nome_rel.py  20260624_002_relax_fre_relacao_subordinacao_nome_admin.py  20260625_001_add_summary_to_analise_materializacao_controle.py  20260625_002_add_pode_operar_materializacao_to_usuarios.py  20260626_001_add_ingestion_performance_indexes.py  20260626_002_drop_ingestion_reconcile_hashes.py  20260630_001_add_ingestion_operational_state_tables.py  20260630_002_add_financeiro_typed_staging_table.py  20260630_003_add_artifact_manifest_metadata.py  20260630_004_optimize_financeiro_stage_runtime.py  20260701_001_add_hash_origem_to_financeiro_stage.py  2a4b6c8d0e1f_widen_demonstracoes_valor_conta.py  37116c79d2eb_add_phase_2_fre_tables.py  3b4c5d6e7f8a_widen_fre_numeric_columns.py  (+28 more)
app/: __init__.py  main.py
deploy/: install-tucano-cvm.sh
docs/: CVM.md  PRD.md  admin_ingestion_v2_api.md  cvm_data_updates_service.md  frontend_api_changelog.md  frontend_materializacao.md  ingestion.md  ingestion_PRD.md  ingestion_v2_rollout.md  ref_cvm.md
docusaurus/: .gitignore  CONTEXT.md  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
scripts/: audit_ingestion_consistency.py  check_all_petrobras_endpoints.py  purge-local-db.sh
tests/: conftest.py
(+227 files in other folders)
