[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tucano-cvm"
version = "0.1.0"
description = "API FastAPI para normalizacao de dados da CVM"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "prometheus-client>=0.21.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.7.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "cvm_live: hits official CVM endpoints and stays opt-in",
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead\\.",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["scratch"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["scratch/"]

[[tool.mypy.overrides]]
module = [
  "app.services.sincronizacao_cadastro",
  "app.services.sincronizacao_financeiro",
  "app.services.sincronizacao_fre",
]
ignore_errors = true
